--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+header{
+    margin-top:80px;
+}
+ol{
+    list-style: none;
+}
+app-detail{
+    width: 100% !important;
+    display: block;
+}
